--- a/main.ipynb
+++ b/main.ipynb
@@ -43,8 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cats_dir = r'D:/Datasets/cats'\n",
-    "dogs_dir = r'D:/Datasets/dogs'\n",
+    "cats_dir = r'Datasets/cats'\n",
+    "dogs_dir = r'Datasets/dogs'\n",
     "image_size = (64, 64)\n",
     "images = []\n",
     "labels = []\n",
